# labwc

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ci-local.sh  flake.nix
.github/workflows/: ci.yml
actions/: Cargo.toml
actions/src/: lib.rs
animation/: Cargo.toml
animation/src/: lib.rs
backend/: Cargo.toml
backend/src/: lib.rs  session.rs
cli/: Cargo.toml
cli/src/: lib.rs
compositor/: Cargo.toml  README.md
compositor/benches/: bench.rs
compositor/src/: lib.rs  main.rs
config/: Cargo.toml
config-watcher/: Cargo.toml
config-watcher/src/: lib.rs
config/src/: lib.rs
control-center/: Cargo.toml
control-center/src/: main.rs  tabs.rs
core/: Cargo.toml
core/src/: cursor.rs  edge.rs  error.rs  geometry.rs  lib.rs  state.rs  types.rs  view_state.rs
decorations/: Cargo.toml  README.md
decorations/src/: lib.rs
focus/: Cargo.toml
focus/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
menus/: Cargo.toml
menus/src/: lib.rs
output/: Cargo.toml
output/src/: edid.rs  lib.rs  modes.rs
packaging/arch/: PKGBUILD
packaging/fedora/: labwc-rs.spec
panel/: Cargo.toml
panel/src/: lib.rs
protocols/: ext-image-capture-source-v1.xml  wp-commit-timing-v1.xml  wp-content-type-v1.xml  wp-fifo-v1.xml  wp-pointer-warp-v1.xml  xdg-toplevel-drag-v1.xml  xdg-toplevel-tag-v1.xml
rendering/: Cargo.toml
rendering/src/: compositor.rs  lib.rs  swapchain.rs  sync.rs
scene/: Cargo.toml
scene/src/: lib.rs
shell/: Cargo.toml
shell/src/: lib.rs
theme/: Cargo.toml
theme/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
wayland/: Cargo.toml
wayland/src/: commit_timing.rs  content_type.rs  fifo.rs  image_capture.rs  lib.rs  pointer_warp.rs  toplevel_drag.rs  toplevel_tag.rs
window/: Cargo.toml
window/src/: lib.rs
workspace/: Cargo.toml
workspace/src/: lib.rs
xdg-desktop/: Cargo.toml
xdg-desktop/src/: autostart.rs  entry.rs  lib.rs
xwayland/: Cargo.toml  README.md
xwayland/src/: lib.rs
