[workspace]
resolver = "2"
members = [
    "compositor",
    "core",
    "backend",
    "wayland",
    "xwayland",
    "scene",
    "input",
    "output",
    "config",
    "ipc",
    "rendering",
    "decorations",
    "window",
    "workspace",
    "focus",
    "shell",
    "actions",
    "menus",
    "theme",
    "animation",
    "util",
    "cli",
]

[workspace.package]
version = "0.20.1"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/mheci/labwc"
authors = ["labwc-rs contributors"]

[workspace.dependencies]
# ── Wayland ecosystem (latest stable) ──
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server", "unstable"] }
wayland-backend = "0.3"

# ── Async runtime ──
calloop = "0.13"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.31"
serde-xml-rs = "0.6"

# ── Data structures ──
bitflags = "2"
smallvec = "1"
indexmap = "2"
parking_lot = "0.12"
once_cell = "1"

# ── Logging ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# ── Error handling ──
thiserror = "1"
anyhow = "1"

# ── CLI ──
clap = { version = "4", features = ["derive"] }

# ── System ──
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process", "fs"] }
signal-hook = "0.3"
dirs = "5"

# ── Image / rendering ──
image = "0.24"
png = "0.17"

# ── Misc ──
tokio = { version = "1", features = ["rt", "sync", "process", "io-util"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
