[package]
name = "labwc-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for labwc-rs (rc.xml, menu.xml, themes)"

[dependencies]
labwc-core = { path = "../core" }
labwc-util = { path = "../util" }
quick-xml.workspace = true
serde.workspace = true
serde-xml-rs.workspace = true
bitflags.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
indexmap.workspace = true
