[package]
name = "labwc-control-center"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI control center for labwc-rs compositor"

[[bin]]
name = "labwc-control-center"
path = "src/main.rs"

[dependencies]
egui = "0.28"
eframe = "0.28"
tracing.workspace = true
tracing-subscriber.workspace = true
