[package]
name = "labwc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for labwc-rs compositor"

[dependencies]
bitflags.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
libc.workspace = true
