[package]
name = "labwc-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC communication for labwc-rs"
[dependencies]
labwc-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
