[package]
name = "labwc-output"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-monitor output management with EDID parsing for labwc-rs"
[dependencies]
labwc-core = { path = "../core" }
tracing.workspace = true
parking_lot.workspace = true
bitflags.workspace = true
