[package]
name = "labwc-panel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated desktop panel for labwc-rs"
[dependencies]
labwc-core = { path = "../core" }
labwc-config = { path = "../config" }
labwc-actions = { path = "../actions" }
labwc-workspace = { path = "../workspace" }
labwc-xdg-desktop = { path = "../xdg-desktop" }
labwc-theme = { path = "../theme" }
tracing.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
