[package]
name = "labwc-rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU renderer (EGL/Vulkan/Pixman) for labwc-rs"
[dependencies]
labwc-core = { path = "../core" }
labwc-backend = { path = "../backend" }
tracing.workspace = true
libc.workspace = true
