[package]
name = "labwc-rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulkan hardware-accelerated multi-head renderer for labwc-rs"

[dependencies]
labwc-core = { path = "../core" }
labwc-backend = { path = "../backend" }
tracing.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
