[package]
name = "labwc-util"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common utility functions for labwc-rs"

[dependencies]
labwc-core = { path = "../core" }
tracing.workspace = true
thiserror.workspace = true
libc.workspace = true
nix.workspace = true
smallvec.workspace = true
dirs.workspace = true
