[package]
name = "labwc-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Virtual desktop workspace management for labwc-rs"

[dependencies]
labwc-core = { path = "../core" }
labwc-output = { path = "../output" }
tracing.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
